--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ form{
     font-size: 25px;
 }
 
-@media only screen and (min-width: 425px) {
+@media only screen and (max-width: 425px) {
     form{
         width: 90%;
         max-width: 90%;
